fixed overflow settings

--- a/stylesim.css
+++ b/stylesim.css
@@ -3,6 +3,7 @@
 
 body {
     background: #fff;
+    overflow-x:hidden;
 }
 
 header {
